# dec25_intern_B_security

./: .gitignore  DATA_FLOW.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  README.md  REPOSITORY_OVERVIEW.md  SETUP.md  example.env  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
agent-backend/: __init__.py  database.py  models.py  pyproject.toml  worker.py
agent-backend/tests/: conftest.py  test_database.py
apps/api/: README.md  main.py  requirements.txt
apps/api/routers/: auth.py  emails.py  stats.py
apps/api/services/: auth.py  gmail.py  gmail_unified.py  risk.py
apps/web/: README.md  auth.ts  middleware.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: auth-components.tsx  chart-area-interactive.tsx  dashboard-layout.tsx  emails-page.tsx  overview-page.tsx
apps/web/styles/: landing.css
apps/worker/action/: ai_fallback.py  gmail_labels.py  main.py  requirements.txt  test_action_logic.py
apps/worker/aggregator/: main.py
apps/worker/analyses/: ai_fallback.py  main.py  manual_trigger.py  mock_final_agent.py  requirements.txt  (+2 more)
dashboard/: auth.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
dashboard-backend/: __init__.py  add_user.py  database.py  gmail_service.py  main.py  migrate.py  models.py  pyproject.toml  seed_db.py
dashboard-backend/tests/: conftest.py  test_gmail_service.py
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: LUFFY_README.md  dashboard-layout.tsx  emails-page.tsx  luffy-chatbot.tsx  luffy-header.tsx  luffy-message.tsx  luffy-quick-actions.tsx  overview-page.tsx  settings-page.tsx  users-page.tsx
dashboard/lib/: api.ts  dummyEmails.ts  threatUtils.ts  useLuffyChat.ts
dashboard/styles/: chatbot.css
dashboard/types/: next-auth.d.ts
decision-agent/: Dockerfile  deploy_decision_agent.sh  main.py  requirements.txt
docs/: ACTION_AGENT.md
email-ingest-agent/: mock_server.py
scripts/: clean_redis.py  seed_db.py
(+27 files in other folders)
