[project]
name = "mailshieldai-backend"
version = "0.1.0"
description = "MailShieldAI Dashboard Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.9",
    "google-auth>=2.40.0",
    "cryptography>=46.0.3",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
]
